--- a/buildings.html
+++ b/buildings.html
@@ -294,7 +294,7 @@
 <div class="resources">
 <div style="color:brown;">🌲Dřevo: <span id="wood">0</span>/2000</div>
 <div style="color:red;">🧱Hlína: <span id="clay">0</span>/2000</div>
-<div <span="" id="iron" style="color:blue;">⛏️železo:="">0/2000</div>
+<div style="color:blue;">⛏️Železo: <span id="iron">0</span>/2000</div>
 <div style="color:goldenrod;">🌾Obilí: <span id="grain">0</span>/2000</div>
 <div style="color:purple;">💎 Tokeny: <span id="tokens">0</span></div>
 <button id="addTokensBtn">Přidat 100 zlatých</button>
