--- a/buildings.html
+++ b/buildings.html
@@ -14,11 +14,14 @@
 
   }
 
-  header {
-
-    background:#333; color:#fff; padding:10px;
-
-    display:flex; justify-content: space-between; align-items:center;
+     header {
+      background-color: #333;
+      color: white;
+      padding: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
   }
 
