--- a/buildings.html
+++ b/buildings.html
@@ -14,7 +14,7 @@
 
   }
 
-     header {
+    header {
       background-color: #333;
       color: white;
       padding: 10px;
@@ -22,22 +22,16 @@
       justify-content: space-between;
       align-items: center;
     }
-
-  }
-
-  nav a {
-
-    color:#fff; text-decoration:none; margin:0 10px; padding:5px 10px;
-
-    border-radius:5px; cursor:pointer;
-
-  }
-
-  nav a:hover {
-
-    background:#555;
-
-  }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 10px;
+      padding: 5px 10px;
+      border-radius: 5px;
+    }
+    nav a:hover {
+      background-color: #555;
+    } 
 
  .resources {
   display: flex;
