--- a/buildings.html
+++ b/buildings.html
@@ -280,13 +280,13 @@
 </style>
 </head>
 <body>
-</header>
-<nav>
-<a href="index.html">Pole</a>
-<a href="buildings.html">Budovy</a>
-<a href="#">Statistiky</a>
-<a href="#">Zprávy</a>
-</nav>
+<header>
+  <nav>
+    <a href="index.html">Pole</a>
+    <a href="buildings.html">Budovy</a>
+    <a href="#">Statistiky</a>
+    <a href="#">Zprávy</a>
+  </nav>
 </header>
 <div class="resources">
 <div style="color:brown;">🌲Dřevo: <span id="wood">0</span>/2000</div>
