--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
       padding: 10px;
       line-height: 1.2em;
       user-select: none;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
     .production-box {
       position: absolute;
