--- a/index.html
+++ b/index.html
@@ -83,22 +83,23 @@
       height: 14px;
     }
     .center-button {
-      width: 80px;
-      height: 80px;
-      background-color: #d4c19c;
-      border-radius: 50%;
-      font-size: 14px;
-      font-weight: bold;
-      cursor: pointer;
-      text-align: center;
-      padding: 10px;
-      line-height: 1.2em;
-      user-select: none;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
+  width: 80px;
+  height: 80px;
+  background-color: #d4c19c;
+  border-radius: 50%;
+  font-size: 14px;
+  font-weight: bold;
+  cursor: pointer;
+  color: #000;
+  text-align: center;
+  line-height: 80px; /* Tohle vycentruje text vertikálně */
+  user-select: none;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
     .production-box {
       position: absolute;
       top: 50%;
