--- a/buildings.html
+++ b/buildings.html
@@ -591,6 +591,7 @@ data.upgradeEnd = Date.now() + durationMs;
       // Inicializace
       loadGame();
       updateResourcesDisplay();
+      updateProduction();
       updateTokensDisplay();
       renderBuildings();
       setInterval(updateTimers, 1000);
