--- a/buildings.html
+++ b/buildings.html
@@ -353,6 +353,7 @@
     };
 
     let floatResources = { wood: 500, clay: 500, iron: 500, grain: 500 };
+    let production = { wood: 0, clay: 0, iron: 0, grain: 0 };
     let tokens = 100;
     let buildingData = {};
     // ----- Load -----
