--- a/buildings.html
+++ b/buildings.html
@@ -388,12 +388,34 @@
     
   function updateProduction() {
   production = {
-    wood: 100,
-    clay: 100,
-    iron: 100,
-    grain: 100
+    wood: 0,
+    clay: 0,
+    iron: 0,
+    grain: 0
   };
+
+  const fields = JSON.parse(localStorage.getItem("fields") || "[]");
+  const productionByLevel = {
+    1: 0,
+    2: 50,
+    3: 150,
+    4: 300,
+    5: 500,
+    6: 800,
+    7: 1200,
+    8: 1700,
+    9: 2300,
+    10: 3000
+  };
+
+  for (const field of fields) {
+    const level = field.level || 0;
+    const type = field.type;
+    const amount = productionByLevel[level] || 0;
+    production[type] += amount;
+  }
 }
+
 
   function updateResourcesDisplay() {
   const warehouseLvl = buildingData["Sklad"]?.level || 0;
